# CHelper-Core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main.h
CHelper-Android/: .clang-format  CMakeLists.txt
CHelper-Android/src/: AndroidNative.cpp
CHelper-Android/src/android/: AndroidNative.cpp
CHelper-Cmd/: CMakeLists.txt
CHelper-Cmd/src/cmd/: CHelperCmd.cpp  CHelperCmd.h
CHelper-Core/: .clang-tidy  CMakeLists.txt
CHelper-Core/include/chelper/chelper/: CHelperCore.h
CHelper-Core/include/chelper/chelper/auto_suggestion/: AutoSuggestion.h  Suggestion.h  Suggestions.h
CHelper-Core/include/chelper/chelper/command_structure/: CommandStructure.h  StructureBuilder.h
CHelper-Core/include/chelper/chelper/lexer/: Lexer.h  LexerPos.h  LexerResult.h  StringReader.h  Token.h  TokenReader.h
CHelper-Core/include/chelper/chelper/linter/: Linter.h
CHelper-Core/include/chelper/chelper/node/: CommandNode.h  NodeBase.h  NodeInitialization.h  NodeType.h  NodeWithType.h
CHelper-Core/include/chelper/chelper/node/json/: NodeJsonBoolean.h  NodeJsonElement.h  NodeJsonEntry.h  NodeJsonFloat.h  NodeJsonInteger.h  NodeJsonList.h  NodeJsonNull.h  NodeJsonObject.h  NodeJsonString.h
CHelper-Core/include/chelper/chelper/node/param/: NodeBlock.h  NodeBoolean.h  NodeCommand.h  NodeCommandName.h  NodeFloat.h  NodeIntegerWithUnit.h  NodeItem.h  NodeJson.h  NodeLF.h  NodeNamespaceId.h  NodeNormalId.h  NodePerCommand.h  NodePosition.h  NodeRange.h  NodeRelativeFloat.h  NodeRepeat.h  NodeString.h  NodeTargetSelector.h  NodeText.h  NodeXpInteger.h
CHelper-Core/include/chelper/chelper/node/template/: NodeNumber.h  (+2 more)
CHelper-Core/include/chelper/chelper/old2new/: Old2New.h
CHelper-Core/include/chelper/chelper/parameter_hint/: ParameterHint.h
CHelper-Core/include/chelper/chelper/parser/: ASTNode.h  ColoredString.h  ErrorReason.h  Parser.h  StructureBuilder.h  Suggestion.h  Suggestions.h  SyntaxResult.h  TokensView.h
CHelper-Core/include/chelper/chelper/resources/: Blocks.h  CPack.h  Manifest.h
CHelper-Core/include/chelper/chelper/serialization/: Serialization.h
CHelper-Core/include/chelper/chelper/settings/: Settings.h
CHelper-Core/include/chelper/chelper/syntax_highlight/: SyntaxHighlight.h  SyntaxResult.h
CHelper-Core/include/chelper/chelper/util/: BinaryUtil.h  Codec.h  JsonUtil.h  KMPMatcher.h  Profile.h  SimpleLogger.h  StringUtil.h
CHelper-Core/include/param_deliver/: CHelperCoreParamDeliver.h.in  ParamDeliver.h.in
CHelper-Core/include/pch/: pch.h
CHelper-Core/include/serialization/serialization/: serialization.h
CHelper-Core/src/chelper/: CHelperCore.cpp
CHelper-Core/src/chelper/auto_suggestion/: AutoSuggestion.cpp  Suggestion.cpp  Suggestions.cpp
CHelper-Core/src/chelper/command_structure/: CommandStructure.cpp  StructureBuilder.cpp
CHelper-Core/src/chelper/lexer/: Lexer.cpp  LexerPos.cpp  LexerResult.cpp  StringReader.cpp  Token.cpp  TokenReader.cpp
CHelper-Core/src/chelper/linter/: Linter.cpp
CHelper-Core/src/chelper/node/: CommandNode.cpp  NodeBase.cpp  NodeInitialization.cpp  NodeType.cpp  NodeWithType.cpp
CHelper-Core/src/chelper/node/json/: NodeJsonBoolean.cpp  NodeJsonElement.cpp  NodeJsonEntry.cpp  NodeJsonFloat.cpp  NodeJsonInteger.cpp  NodeJsonList.cpp  NodeJsonNull.cpp  NodeJsonObject.cpp  NodeJsonString.cpp
CHelper-Core/src/chelper/node/param/: NodeBlock.cpp  NodeBoolean.cpp  NodeCommand.cpp  NodeCommandName.cpp  NodeFloat.cpp  NodeInteger.cpp  NodeIntegerWithUnit.cpp  NodeItem.cpp  NodeJson.cpp  NodeLF.cpp  NodeNamespaceId.cpp  NodeNormalId.cpp  NodePerCommand.cpp  NodePosition.cpp  NodeRange.cpp  NodeRelativeFloat.cpp  NodeRepeat.cpp  NodeString.cpp  NodeTargetSelector.cpp  NodeText.cpp  NodeXpInteger.cpp
CHelper-Core/src/chelper/node/template/: NodeNumber.cpp  NodeTemplateBoolean.cpp  NodeTemplateNumber.cpp
CHelper-Core/src/chelper/node/util/: NodeAnd.cpp  NodeAny.cpp  NodeEntry.cpp  NodeEqualEntry.cpp  NodeList.cpp  NodeOr.cpp  NodeSingleSymbol.cpp  NodeWrapped.cpp
CHelper-Core/src/chelper/old2new/: Old2New.cpp
CHelper-Core/src/chelper/parameter_hint/: ParameterHint.cpp
CHelper-Core/src/chelper/parser/: ASTNode.cpp  ColoredString.cpp  ErrorReason.cpp  Parser.cpp  StructureBuilder.cpp  Suggestion.cpp  Suggestions.cpp  SyntaxResult.cpp  TokensView.cpp
CHelper-Core/src/chelper/resources/: Blocks.cpp  CPack.cpp  Manifest.cpp
CHelper-Core/src/chelper/resources/id/: BlockId.cpp  ItemId.cpp  NamespaceId.cpp  NormalId.cpp
CHelper-Core/src/chelper/serialization/: Serialization.cpp
CHelper-Core/src/chelper/settings/: Settings.cpp
CHelper-Core/src/chelper/syntax_highlight/: SyntaxHightlight.cpp  SyntaxResult.cpp
CHelper-Core/src/chelper/util/: BinaryUtil.cpp  JsonUtil.cpp  KMPMatcher.cpp  Profile.cpp  SimpleLogger.cpp  StringUtil.cpp
CHelper-Qt/: CMakeLists.txt
CHelper-Qt/src/: CHelperQt.cpp  CHelperQt.h  chelper.qrc  chelper.ui
CHelper-Qt/src/assets/: release-experiment-1.21.101.1.cpack  release-experiment-1.21.21.01.cpack  release-experiment-1.21.30.03.cpack  release-experiment-1.21.50.07.cpack  release-experiment-1.21.51.02.cpack  release-experiment-1.21.81.2.cpack  release-experiment-1.21.90.3.cpack  release-experiment-1.21.92.1.cpack  release-experiment-1.21.93.1.cpack  release-experiment-1.21.94.1.cpack
CHelper-Qt/src/qt/assets/: release-experiment-1.21.20.03.cpack
CHelper-Test/: .clang-tidy  CMakeLists.txt
CHelper-Test/src/: BinaryUtilTest.cpp  ColorStringTest.cpp  KMPMatcherTest.cpp  MainTest.cpp  Old2NewTest.cpp
CHelper-Test/src/test/: ColorStringTest.cpp  MainTest.cpp  Old2NewTest.cpp
CHelper-Web/: CMakeLists.txt
CHelper-Web/script/: build-wasm.bash  build-wasm.bat  patch-wasm.py
CHelper-Web/src/: CHelperWeb.cpp
CHelper-Web/src/web/: CHelperWeb.cpp
CHelper-Windows/: CMakeLists.txt
CHelper-Windows/src/: CHelperWindows.cpp  CHelperWindows.h
include/hedley/: .gitignore  CMakeLists.txt  NEWS.md  README.md
include/hedley/include/: hedley.h
include/hedley/test/: .gitignore  CMakeLists.txt  Makefile  access.c
script/wasm/: CMakeLists.txt  build-wasm.bash  wasm-patch.py
(+967 files in other folders)
